# DemoProject

./: .gitignore  App.tsx  buildHM.sh  metro.config.js  package-lock.json  package.json  start.sh  tsconfig.json
harmony/: build-profile.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/entry/: oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
harmony/entry/src/main/ets/: RNPackagesFactory.ets
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/model/: SplashScreen.ets
harmony/entry/src/main/ets/pages/: HomeList.ets  HomeListView.ets  Index.ets  ShadowImage.ets  SplashScreenPage.ets
harmony/entry/src/main/ets/utils/: StorageUtils.ets
plugins/: home-list-view-1.0.0.tgz  react-native-hmos-nosetime-home-list-1.0.0.tgz  react-native-hmos-nosetime-shadow-image-1.0.0.tgz  react-native-oh-tpl-react-native-gesture-handler-2.14.12.tgz
src/navigations/: TabOption.tsx  page.tsx  route.tsx  tabs.tsx
src/pages/: Detail.tsx  Detail2.tsx  home.tsx  user.tsx
